Fixed a crash with the fragment manager

--- a/app/src/main/res/menu/main_menu_attysecg.xml
+++ b/app/src/main/res/menu/main_menu_attysecg.xml
@@ -6,74 +6,76 @@
         android:id="@+id/toggleRec"
         android:icon="@drawable/ic_action_rec"
         android:title="rec"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:title="View"
-        app:showAsAction="ifRoom|withText">
-
-        <menu>
-
-            <item android:title="ECG analysis">
-                <menu>
-                    <item
-                        android:id="@+id/plotWindowOff"
-                        android:title="off" />
-                    <item
-                        android:id="@+id/plotWindowBPM"
-                        android:title="Heart rate" />
-                    <item
-                        android:id="@+id/plotWindowVector"
-                        android:title="Vector ECG" />
-                    <item
-                        android:id="@+id/plotWindowECG"
-                        android:title="PQRST inspector" />
-                </menu>
-            </item>
-
-            <group android:checkableBehavior="all">
-                <item
-                    android:id="@+id/showEinthoven"
-                    android:checked="true"
-                    android:title="Show Einthoven" />
-                <item
-                    android:id="@+id/showAugmented"
-                    android:checked="true"
-                    android:title="Show Augmented leads" />
-                <item
-                    android:id="@+id/showHRV"
-                    android:checked="false"
-                    android:title="Show HRV animation" />
-                <item
-                    android:id="@+id/heartbeatsound"
-                    android:checked="false"
-                    android:title="Heartbeat sound" />
-            </group>
-
-            <item
-                android:checked="true"
-                android:title="gain">
-
-                <menu>
-                    <item
-                        android:id="@+id/Ch1gain200"
-                        android:title="low" />
-                    <item
-                        android:id="@+id/Ch1gain500"
-                        android:title="standard" />
-                    <item
-                        android:id="@+id/Ch1gain1000"
-                        android:title="high" />
-                </menu>
-
-            </item>
-        </menu>
-    </item>
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/enterFilename"
-        app:showAsAction="ifRoom|withText"
-        android:title="Filename" />
+        android:title="Filename"
+        app:showAsAction="always" />
+
+    <item android:title="ECG analysis"
+        app:showAsAction="collapseActionView">
+        <menu>
+            <item
+                app:showAsAction="never"
+                android:id="@+id/plotWindowOff"
+                android:title="off" />
+            <item
+                app:showAsAction="never"
+                android:id="@+id/plotWindowBPM"
+                android:title="Heart rate" />
+            <item
+                app:showAsAction="never"
+                android:id="@+id/plotWindowVector"
+                android:title="Vector ECG" />
+            <item
+                app:showAsAction="never"
+                android:id="@+id/plotWindowECG"
+                android:title="PQRST inspector" />
+        </menu>
+    </item>
+
+    <group android:checkableBehavior="all">
+        <item
+            app:showAsAction="ifRoom"
+            android:id="@+id/showEinthoven"
+            android:checked="true"
+            android:title="Show Einthoven" />
+        <item
+            app:showAsAction="ifRoom"
+            android:id="@+id/showAugmented"
+            android:checked="true"
+            android:title="Show Augmented leads" />
+        <item
+            app:showAsAction="ifRoom"
+            android:id="@+id/showHRV"
+            android:checked="false"
+            android:title="Show HRV animation" />
+        <item
+            app:showAsAction="ifRoom"
+            android:id="@+id/heartbeatsound"
+            android:checked="false"
+            android:title="Heartbeat sound" />
+    </group>
+
+    <item
+        app:showAsAction="ifRoom"
+        android:checked="true"
+        android:title="gain">
+
+        <menu>
+            <item
+                android:id="@+id/Ch1gain200"
+                android:title="low" />
+            <item
+                android:id="@+id/Ch1gain500"
+                android:title="standard" />
+            <item
+                android:id="@+id/Ch1gain1000"
+                android:title="high" />
+        </menu>
+
+    </item>
 
     <item
         android:id="@+id/filebrowser"
