--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
     </style>
 
     <style name="CustomDialog" parent="Theme.AppCompat.Light.Dialog">
-        <item name="android:windowBackground">@drawable/dialogbox</item>
+        <item name="android:windowBackground">?attr/colorPrimary</item>
         <item name="android:colorAccent">#000</item>
         <item name="android:textColor">#000</item>
         <item name="android:textColorPrimary">#000</item>
