Changed the menu from source code to online resources

--- a/app/src/main/res/menu/main_menu_attysecg.xml
+++ b/app/src/main/res/menu/main_menu_attysecg.xml
@@ -88,7 +88,7 @@
 
     <item
         android:id="@+id/sourcecode"
-        android:title="Source code"
+        android:title="Online resources"
         app:showAsAction="never" />
 
 </menu>
