Fixed MPT updates

--- a/app/src/main/res/menu/main_menu_attysecg.xml
+++ b/app/src/main/res/menu/main_menu_attysecg.xml
@@ -13,7 +13,7 @@
         app:showAsAction="always" />
 
     <item android:title="ECG analysis"
-        app:showAsAction="collapseActionView">
+        app:showAsAction="collapseActionView|ifRoom">
         <menu>
             <item
                 app:showAsAction="never"
