Share dialogue should not call shard if nothing has been selected

--- a/app/src/main/res/menu/main_menu_attysecg.xml
+++ b/app/src/main/res/menu/main_menu_attysecg.xml
@@ -78,7 +78,7 @@
 
     <item
         android:id="@+id/filebrowser"
-        android:title="File browser"
+        android:title="Share files"
         app:showAsAction="never" />
 
     <item
